syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;session";

package session;

message SessionID {
    int64 id = 1;
}

message UserLogin {
  string email = 1;
  string password = 2;
}

message UserSignup {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
  string email = 5;
  string avatar = 6;
}

message User {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  int64 id = 4;
  string email = 5;
  string avatar = 6;
}

message UserUpdate {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
  string email = 5;
  string avatar = 6;
  int64 id = 7;
}

message Nothing {
  bool dummy = 1;
}

// grpc-сервис проверки авторизации
service AuthChecker {
    rpc Login (UserLogin) returns (SessionID) {}
    rpc Signup (UserSignup) returns (SessionID) {}
    rpc Check (SessionID) returns (User) {}
    rpc Delete (SessionID) returns (Nothing) {}
}
